# eerl-icebreaker

./: README.md
.github/workflows/: deploy-pages.yml  publish-api-container-dev.yml  publish-api-container.yml  publish-ui-container-dev.yml  publish-ui-container.yml
backend/: Dockerfile  Makefile  pyproject.toml
backend/api/: auth.py  config.py  main.py
backend/api/models/: campaigns.py  settings.py
backend/api/services/: campaigns.py  s3.py
backend/api/views/: campaigns.py  files.py  settings.py
data/: .gitignore  Makefile
frontend/: .eslintrc-auto-import.json  Dockerfile  index.html  package-lock.json  package-lock.json2  package.json  quasar.config.js
frontend/src/: auto-imports.d.ts  models.ts
frontend/src/assets/: expeditions.json  introduction.md  links.json
frontend/src/boot/: api.ts  maps.ts
frontend/src/components/: AppHeader.vue  AppToolbar.vue  CampaignView.vue  EssentialLink.vue  ExpeditionView.vue  LayersDrawer.vue  SimpleDialog.vue  models.ts
frontend/src/components/admin/: CampaignForm.vue
frontend/src/components/map/: AzimuthView.vue  AzimuthViews.vue  GlobeView.vue
frontend/src/i18n/en/: index.ts
frontend/src/layouts/: MainLayout.vue
frontend/src/pages/: AdminPage.vue  HomePage.vue  ProfilePage.vue
frontend/src/router/: routes.ts
frontend/src/stores/: admin.ts  auth.ts  map.ts  settings.ts
frontend/src/utils/: notify.ts  numbers.ts
